--- a/Shirt/index.html
+++ b/Shirt/index.html
@@ -8,6 +8,12 @@
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="East Lansing">
     <meta name="ICBM" content="42.726963, -84.479450">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Best-selling Shirt" />
+    <meta name="twitter:description" content="It might be a cat on a shirt so
+    don't miss out" />
+    <meta name="og:title" content="Best-selling Shirt" />
+    <meta name="og:image" content="santa_claws_tee.jpg" />
     <title>T-shirt</title>
     <link href="/favicon.ico?version=1" rel="shortcut icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
