--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="twitter:description" content="It might be a cat on a shirt so
     don't miss out" />
     <meta name="og:title" content="Best-selling Shirt" />
+    <meta name="og:description" content="It might be a cat on a shirt so
+    don't miss out" />
+    <meta name="og:url" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/" />
     <meta name="og:image" content="santa_claws_tee.jpg" />
     <title>Best-Selling Shirt</title>
     <link href="/favicon.ico?version=1" rel="shortcut icon">
