--- a/Shirt/index.html
+++ b/Shirt/index.html
@@ -13,7 +13,11 @@
     <meta name="twitter:description" content="It might be a cat on a shirt so
     don't miss out" />
     <meta name="og:title" content="Best-selling Shirt" />
+    <meta name="og:description" content="It might be a cat on a shirt so
+    don't miss out" />
+    <meta name="og:url" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/" />
     <meta name="og:image" content="santa_claws_tee.jpg" />
+
     <title>T-shirt</title>
     <link href="/favicon.ico?version=1" rel="shortcut icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
