html meta elements redo

--- a/Shirt/index.html
+++ b/Shirt/index.html
@@ -10,13 +10,14 @@
     <meta name="ICBM" content="42.726963, -84.479450">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Best-selling Shirt" />
+    <meta name="twitter:image" content="santa_claws_tee.jpg" />
     <meta name="twitter:description" content="It might be a cat on a shirt so
     don't miss out" />
-    <meta name="og:title" content="Best-selling Shirt" />
-    <meta name="og:description" content="It might be a cat on a shirt so
+    <meta property="og:title" content="Best-selling Shirt" />
+    <meta property="og:description" content="It might be a cat on a shirt so
     don't miss out" />
-    <meta name="og:url" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/" />
-    <meta name="og:image" content="santa_claws_tee.jpg" />
+    <meta property="og:url" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/" />
+    <meta property="og:image" content="santa_claws_tee.jpg" />
 
     <title>T-shirt</title>
     <link href="/favicon.ico?version=1" rel="shortcut icon">
