meta element redo

--- a/Shirt/index.html
+++ b/Shirt/index.html
@@ -11,9 +11,11 @@
     <meta name="ICBM" content="42.726963, -84.479450">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Best-selling Shirt" />
+    <!--Added Image -->
     <meta name="twitter:image" content="santa_claws_tee.jpg" />
     <meta name="twitter:description" content="It might be a cat on a shirt so
     don't miss out" />
+    <!-- Fixed name to property -->
     <meta property="og:title" content="Best-selling Shirt" />
     <meta property="og:description" content="It might be a cat on a shirt so
     don't miss out" />
