--- a/Shirt/index.html
+++ b/Shirt/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Best-selling Shirt" />
     <!--Added Image -->
-    <meta name="twitter:image" content="santa_claws_tee.jpg" />
+    <meta name="twitter:image" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/santa_claws_tee.jpg" />
     <meta name="twitter:description" content="It might be a cat on a shirt so
     don't miss out" />
     <!-- Fixed name to property -->
