meta elements redo meta

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:description" content="It might be a cat on a shirt so
     don't miss out" />
     <meta property="og:url" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/" />
-    <meta property="og:image" content="santa_claws_tee.jpg" />
+    <meta property="og:image" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/santa_claws_tee.jpg" />
     <title>Best-Selling Shirt</title>
     <link href="/favicon.ico?version=1" rel="shortcut icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
