--- a/Shirt/index.html
+++ b/Shirt/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="It might be a cat on a shirt so
     don't miss out" />
     <meta property="og:url" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/" />
-    <meta property="og:image" content="santa_claws_tee.jpg" />
+    <meta property="og:image" content="https://finchmar-kapv98gmwdanx_f2dok.surge.sh/santa_claws_tee.jpg" />
 
     <title>T-shirt</title>
     <link href="/favicon.ico?version=1" rel="shortcut icon">
